--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="icon" type="image/jpg" href="/favicon.png">
+<link rel="icon" type="image/jpg" href="/imagesfolder/favicon.png">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,6 +18,9 @@
             <p>Call US ON +91 9986793055 </p>
         </section>
          <!-- Part 2 -->
+         <div class="icons">
+          <i class="fas fa-bars" &#xf0c9;></i>
+        </div>
 
        <div class="head">
         <img src="/imagesfolder/logo/logo.png"> 
@@ -45,7 +48,7 @@
 </div>
 </div>  
 </div>      
-<div class="btn-4"><a href="/htmlfolder/Contact us.html">Contact Us</a></div>
+<div class="btn-4"><a href="/Contact us.html">Contact Us</a></div>
 </div>
 </div>
 
@@ -160,7 +163,7 @@
                     <img src="/imagesfolder/media/two.d9249d286e270d23f301.png">
                     <div class="text1-6">
                     <h1>Speakers for<span> Rental <br>For your Events Now</span> </h1> <br>
-                    <button class="btn-8"><a href="/htmlfolder/Contact us.html"> Enquire Now</a></button> 
+                    <button class="btn-8"><a href="/Contact us.html"> Enquire Now</a></button> 
                    </div> 
                    <div class="img1-6">
                   <img src="/imagesfolder/media/two.d9249d286e270d23f301.png"> 
@@ -274,28 +277,28 @@
          
             <div class="txt-16">
               <h1> <u>Quic</u>k Links</h1><br>
-              <a href="/htmlfolder/index.html">Home </a><br><br>
-              <a href="/htmlfolder/about.html">About US </a><br><br>
-              <a href="/htmlfolder/service.html">Service </a><br><br>
-              <a href="/htmlfolder/Contact us.html">Contact Us </a><br>
+              <a href="/index.html">Home </a><br><br>
+              <a href="/about.html">About US </a><br><br>
+              <a href="/service.html">Service </a><br><br>
+              <a href="/Contact us.html">Contact Us </a><br>
             </div>
             <div class="txt-17">
               <h1> <u>Serv</u>ices</h1><br>
-              <a href="/htmlfolder/projector.html">Projector</a><br>
-              <a href="/htmlfolder/speaker.html">Speakers</a><br>
-              <a href="/htmlfolder/led tv.html">LED TV</a><br>
-              <a href="/htmlfolder/lighting.html">Lighting</a><br>
-              <a href="/htmlfolder/photo-video.html">Photography-<br>Videography</a><br>
-              <a href="/htmlfolder/shamiana.html">Shamiana</a><br>
-              <a href="/htmlfolder/dj package.html">DJ Packages</a>
+              <a href="/projector.html">Projector</a><br>
+              <a href="/speaker.html">Speakers</a><br>
+              <a href="/led tv.html">LED TV</a><br>
+              <a href="/lighting.html">Lighting</a><br>
+              <a href="/photo-video.html">Photography-<br>Videography</a><br>
+              <a href="/shamiana.html">Shamiana</a><br>
+              <a href="/dj package.html">DJ Packages</a>
             </div>
               <div class="ab12">
-              <a href="/htmlfolder/wedding package.html">Wedding Packages</a><br>
-              <a href="/htmlfolder/live streaming.html">Live Streaming</a><br>
-              <a href="/htmlfolder/flower ballon decoration.html">Flower And <br>Balloon Decorations</a>
-              <a href="/htmlfolder/catering.html">Catering</a><br>
-              <a href="/htmlfolder/t-shirt and corparate gift.html">T-Shirts And <br>Corporate Gifts</a><br>
-              <a href="/htmlfolder/other services.html">Other Services</a><br>
+              <a href="/wedding package.html">Wedding Packages</a><br>
+              <a href="/live streaming.html">Live Streaming</a><br>
+              <a href="/flower ballon decoration.html">Flower And <br>Balloon Decorations</a>
+              <a href="/catering.html">Catering</a><br>
+              <a href="/t-shirt and corparate gift.html">T-Shirts And <br>Corporate Gifts</a><br>
+              <a href="/other services.html">Other Services</a><br>
           </div>
          
           <div class="txt-18">
